--- a/package.json
+++ b/package.json
@@ -7,47 +7,41 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "create-admin": "ts-node --compiler-options {\\\"module\\\":\\\"CommonJS\\\"} scripts/create-admin.ts"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/sortable": "^10.0.0",
-    "@prisma/client": "^6.9.0",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-select": "^2.2.5",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@types/cheerio": "^0.22.35",
-    "bcryptjs": "^3.0.2",
-    "cheerio": "^1.1.0",
-    "class-variance-authority": "^0.7.1",
-    "cloudinary": "^2.6.1",
+    "@prisma/client": "5.14.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "bcryptjs": "^2.4.3",
+    "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
-    "cookie": "^1.0.2",
-    "jose": "^6.0.11",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.515.0",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1",
-    "use-debounce": "^10.0.5",
-    "zustand": "^5.0.5"
+    "jose": "^5.2.4",
+    "lucide-react": "^0.378.0",
+    "next": "14.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "resend": "^3.2.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/cookie": "^0.6.0",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "prisma": "^6.9.0",
-    "tailwindcss": "^4",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8.4.38",
+    "prisma": "5.14.0",
+    "tailwindcss": "3.4.3",
     "ts-node": "^10.9.2",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
