--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "dependencies": {
     "@prisma/client": "5.14.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
