--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3001",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "db:migrate": "prisma migrate deploy",
+    "db:seed": "prisma db seed"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -21,6 +23,7 @@
     "@radix-ui/react-switch": "^1.2.5",
     "@types/jspdf": "^1.3.3",
     "@types/leaflet": "^1.9.20",
+    "@types/pg": "^8.15.5",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -36,6 +39,7 @@
     "lucide-react": "^0.378.0",
     "next": "^14.2.33",
     "next-themes": "^0.4.6",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
