--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/jspdf": "^1.3.3",
     "@types/leaflet": "^1.9.20",
     "@types/pg": "^8.15.5",
+    "@aws-sdk/client-cognito-identity-provider": "^3.658.1",
+    "aws-jwt-verify": "^4.0.1",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
