Agregar soporte para caché de productos y enviar correos electrónicos utilizando Nodemailer y AWS SES

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "resend": "^3.2.0",
+    "nodemailer": "^6.9.8",
+    "redis": "^4.6.12",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
@@ -63,6 +64,7 @@
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
+    "@types/nodemailer": "^6.4.14",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.3",
